--- a/actions-zola/Dockerfile
+++ b/actions-zola/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:latest
+FROM debian:stretch-slim
 ARG zola_version
 
 LABEL repository="https://github.com/wass3r/actions-zola"
@@ -8,6 +8,8 @@ LABEL "com.github.actions.name"="actions-zola"
 LABEL "com.github.actions.description"="create static sites with zola"
 LABEL "com.github.actions.icon"="book"
 LABEL "com.github.actions.color"="blue"
+
+RUN apt-get update && apt-get install -y wget
 
 RUN wget -q -O - \
     "https://github.com/getzola/zola/releases/download/${zola_version}/zola-${zola_version}-x86_64-unknown-linux-gnu.tar.gz" \
