--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,8 @@ jobs:
         id: test
         continue-on-error: true
         uses: ./
+        env:
+          GH_TOKEN: ${{ github.token }}
         with:
           zola_version: ${{ matrix.version }}
           root: test-site
