--- a/action.yml
+++ b/action.yml
@@ -150,11 +150,13 @@ runs:
         echo ""
         echo "🔐 Verifying SHA256 checksum..."
 
-        ASSET_URL="https://api.github.com/repos/getzola/zola/releases/tags/v${VERSION}"
-        EXPECTED_SHA=$(curl -sSfL "$ASSET_URL" | \
-          jq -r ".assets[] | select(.name == \"${ARCHIVE}\") | .url" | \
-          xargs -I {} curl -sSfL -H "Accept: application/vnd.github+json" {} | \
-          jq -r '.sha256 // empty')
+        # Get expected SHA256 from GitHub API
+        EXPECTED_SHA=$(curl -sSfL \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          "https://api.github.com/repos/getzola/zola/releases/tags/v${VERSION}" | \
+          jq -r ".assets[] | select(.name == \"${ARCHIVE}\") | .digest" | \
+          sed 's/sha256://')
 
         if [ -z "$EXPECTED_SHA" ]; then
           echo "::error::Failed to retrieve SHA256 from GitHub API"
@@ -162,6 +164,7 @@ runs:
           exit 1
         fi
 
+        # Calculate actual SHA256
         if [ "$RUNNER_OS" = "macOS" ]; then
           ACTUAL_SHA=$(shasum -a 256 "/tmp/${ARCHIVE}" | awk '{print $1}')
         else
