need token in other places

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,6 +68,8 @@ jobs:
 
       - name: Build test site
         uses: ./
+        env:
+          GH_TOKEN: ${{ github.token }}
         with:
           zola_version: ${{ matrix.zola_version }}
           root: test-site
@@ -101,12 +103,16 @@ jobs:
 
       - name: Test with custom base_url
         uses: ./
+        env:
+          GH_TOKEN: ${{ github.token }}
         with:
           root: test-site
           base_url: https://example.com
 
       - name: Test with custom output_dir
         uses: ./
+        env:
+          GH_TOKEN: ${{ github.token }}
         with:
           root: test-site
           output_dir: dist
@@ -121,6 +127,8 @@ jobs:
 
       - name: Test with drafts enabled
         uses: ./
+        env:
+          GH_TOKEN: ${{ github.token }}
         with:
           root: test-site
           drafts: true
@@ -135,11 +143,15 @@ jobs:
 
       - name: First build (cache miss)
         uses: ./
+        env:
+          GH_TOKEN: ${{ github.token }}
         with:
           root: test-site
 
       - name: Second build (cache hit)
         uses: ./
+        env:
+          GH_TOKEN: ${{ github.token }}
         with:
           root: test-site
 
