--- a/action.yml
+++ b/action.yml
@@ -106,7 +106,7 @@ runs:
 
     - name: Cache Zola binary
       id: cache-zola
-      uses: actions/cache@v4
+      uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4.3.0
       with:
         path: ~/.zola/bin
         key: zola-${{ inputs.zola_version }}-${{ steps.platform.outputs.target }}-v2-verified
